# KlonTUIke

./: CMakeLists.txt  Makefile  README.md
src/: logical.c  logical.h  lv_inter.c  lv_inter.h  lv_interface.c  lv_interface.h  main.c  visual.c  visual.h
